--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.5  # Untuk platform lain selain web
+  sqflite_common_ffi_web: ^1.0.0  # Untuk web
+
+
 
 dev_dependencies:
   flutter_test:
