--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.5  # Untuk platform lain selain web
   sqflite_common_ffi_web: ^1.0.0  # Untuk web
+  url_launcher: ^6.1.7
+  flutter_phone_direct_caller: ^2.1.1
+  permission_handler: ^11.0.0
 
 
 
